# PRUNE

./: .gitignore  CHANGELOG.md  OPTIMIZATION_CHANGES.md  OPTIMIZATION_CODE_DIFF.md  OPTIMIZATION_QUICK_REF.md  README.md  RELEASE_NOTES_v1.0.0.md  VALIDATION_QUICK_REF.md  dataset-compose.yml  docker-compose.yml  forestsphere.md  pytest.ini  requirements.txt
Docker/: entfac-sensor-fusion-noetic.Dockerfile  entfac-sensor-fusion.Dockerfile  prune-noetic.Dockerfile  ros.Dockerfile
docs/: VALIDATION_WORKFLOW.md  conf.py  index.md
docs/manual/: architecture.md  core_api.md  failure_modes.md  glossary.md  online_calibration_methodology.md  parameters.md  public_api.md  quickstart.md  ros_contract.md  tf_cheatsheet.md
docs/tools/: extract_ros_params.py
entfac_fusion_core/: CMakeLists.txt  __init__.py  package.xml  setup.py
entfac_fusion_core/projection/: __init__.py  depth.py  lidar_projection.py
entfac_fusion_core/semantic_pcl/: __init__.py  fusion.py
entfac_fusion_core/src/entfac_fusion_core/: __init__.py
entfac_fusion_core/src/entfac_fusion_core/calibration/: online_health.py
entfac_fusion_core/src/entfac_fusion_core/colored_pcl/: __init__.py  fusion.py
entfac_fusion_core/src/entfac_fusion_core/projection/: __init__.py  depth.py  lidar_projection.py
entfac_fusion_core/src/entfac_fusion_core/semantic_pcl/: __init__.py  fusion.py
entfac_fusion_core/src/entfac_fusion_core/transforms/: __init__.py  se3.py
entfac_fusion_core/src/entfac_fusion_core/types/: __init__.py  observations.py
entfac_fusion_core/src/entfac_fusion_core/utils/: __init__.py  masks.py  semantics.py  validation.py
entfac_fusion_core/transforms/: __init__.py  se3.py
entfac_fusion_core/types/: __init__.py  observations.py
entfac_fusion_core/utils/: __init__.py  validation.py
entfac_fusion_ros/: CMakeLists.txt  package.xml  setup.py
entfac_fusion_ros/cfg/: ColoredPclTuning.cfg  PruneTuning.cfg
entfac_fusion_ros/config/: choupal_semantic_pcl.yaml  core.yaml  curt_mini.yaml  curt_mini_calibration_debug.yaml  curt_mini_realsense_camera_info.txt  curtmini.rviz  dataset.yaml  expert.yaml  forestsphere.rviz  forestsphere.yaml  semantic_pcl.yaml
entfac_fusion_ros/entfac_fusion_ros/: __init__.py  colored_pcl_node.py  colored_pcl_params.py  colored_pcl_startup.py  conversions.py  debug_publisher.py  experiment_metrics.py  imu_cache.py  lidar_projection_utils.py  lidar_projector.py  live_tuning.py  logging_ros.py  online_calibration.py  pc2.py  ply.py  pose_to_tf_math.py  prune_node.py  semantic_pcl_node.py  status.py  tf_utils.py  tracked_reprojection.py
entfac_fusion_ros/entfac_fusion_ros/colored_pcl/: __init__.py  bootstrap.py  camera_model.py  config.py  depth_pipeline.py  diagnostics.py  frame_inputs.py  initializer.py  lidar_pipeline.py  live_tuning.py  metrics_reporting.py  online_calibration_bridge.py  param_reader.py  ply_service.py  results.py  ros_io.py  runtime_setup.py  semantic_inputs.py  startup_reporting.py  sync_policy.py  tf_resolver.py
entfac_fusion_ros/entfac_fusion_ros/prune/: __init__.py  bootstrap.py  camera_model.py  config.py  config_debug.py  config_experiment.py  config_gate.py  depth_pipeline.py  diagnostics.py  frame_inputs.py  initializer.py  lidar_pipeline.py  live_tuning.py  metrics_reporting.py  online_calibration_bridge.py  param_reader.py  ply_service.py  results.py  ros_io.py  runtime_builders.py  runtime_setup.py  semantic_inputs.py  startup_builder.py  startup_reporting.py  sync_policy.py  tf_resolver.py  tracked_reprojection_runtime.py
entfac_fusion_ros/launch/: choupal_semantic_pcl.launch  choupal_tf.launch  colored_pcl.launch  curt_mini.launch  curt_mini_calibration_debug.launch  dataset_fusion.launch  prune.launch  ren_inwards.launch  semantic_pcl.launch
entfac_fusion_ros/nodes/: semantic_pcl_node.py
entfac_fusion_ros/scripts/: colored_pcl_node.py  prune_node.py  semantic_pcl_node.py  test_colored_pcl_node.py  test_prune_node.py  test_semantic_pcl_node.py
entfac_fusion_ros/src/entfac_fusion_ros/: __init__.py  conversions.py  pc2.py  ply.py  semantic_pcl_node.py  status.py
entfac_fusion_ros/test/: test_colored_pcl_node.test  test_prune_node.test  test_semantic_pcl_node.test
entfac_fusion_ros/tests/: test_colored_pcl_config.py  test_imu_cache.py  test_live_tuning.py  test_sync_policy.py
entfac_fusion_ros/urdf/: apparatus.urdf.xacro
prune_core/: CMakeLists.txt  package.xml  setup.py
prune_core/src/prune_core/: __init__.py
prune_core/src/prune_core/calibration/: __init__.py  online_health.py
prune_core/src/prune_core/colored_pcl/: __init__.py  fusion.py  sampling.py
prune_core/src/prune_core/geometry/: __init__.py  local_reliability.py
prune_core/src/prune_core/projection/: __init__.py  depth.py  lidar_projection.py
prune_core/src/prune_core/transforms/: __init__.py  se3.py
prune_core/src/prune_core/types/: __init__.py  observations.py
prune_core/src/prune_core/utils/: __init__.py  masks.py  semantics.py  validation.py
prune_ros/: .gitignore  CMakeLists.txt  package.xml  setup.py
prune_ros/cfg/: PruneTuning.cfg
prune_ros/config/: core.yaml  expert.yaml
prune_ros/launch/: prune.launch
prune_ros/prune_ros/: __init__.py
prune_ros/scripts/: pose_to_tf.py  prune_node.py  test_prune_node.py
prune_ros/test/: test_prune_node.test
prune_ros/tests/: test_colored_pcl_config.py  test_experiment_metrics.py  test_geometric_gate_projector.py  test_icnf_validation.py  test_imu_cache.py  test_live_tuning.py  test_sync_policy.py
scripts/ufomap/: write_semantic_ufomap_run_params.py  write_semantic_ufomap_snapshot_log.py
tests/: test_depth_projection.py  test_experiment_metrics.py  test_fusion.py  test_geometric_reliability.py  test_mask_utils.py  test_observations_validation.py  test_online_calibration_health.py  test_semantics_utils.py  test_validation_utils.py  test_write_semantic_ufomap_run_params.py  test_write_semantic_ufomap_snapshot_log.py
tools/: quick_validate.sh  sync-metric-guide.md  tools.md  validate_bag_workflow.py  validate_curtmini_workflow.sh  validation_runner.sh
tools/diagnostics/: rosbag_time_skew.py
(+87 files in other folders)
