<?xml version="1.0"?>
<package format="2">
  <name>entfac_fusion_core</name>
  <version>0.1.0</version>
  <description>ROS-agnostic numpy core for ENTFAC Sensor Fusion.</description>

  <maintainer email="duda.andrada@isr.uc.pt">Duda Andrada</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>python3-numpy</exec_depend>
</package>
