<?xml version="1.0"?>
<package format="2">
  <name>entfac_fusion_ros</name>
  <version>0.1.0</version>
  <description>ROS wrappers for ENTFAC Sensor Fusion semantic point cloud generation.</description>

  <maintainer email="duda.andrada@isr.uc.pt">Duda Andrada</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>message_filters</exec_depend>

  <test_depend>rostest</test_depend>
</package>
